PROJECT (OpencvVisualizer)
CMAKE_MINIMUM_REQUIRED(VERSION 3.8)

SET(PROJECT_DIR ${CMAKE_CURRENT_SOURCE_DIR})
MESSAGE(STATUS "This is PROJECT dir: " ${PROJECT_DIR})

FILE(GLOB_RECURSE SRC_LIST ${PROJECT_DIR}/src/*)
MESSAGE(STATUS "This is SRC_LIST: " ${SRC_LIST}) 

SET(OPENCV_DIR ${PROJECT_DIR}/3rdparty/opencv-3.4.0)
INCLUDE_DIRECTORIES(${OPENCV_DIR}/include)
IF(CMAKE_BUILD_TYPE MATCHES "Debug")
	MESSAGE(STATUS "This is Debug") 
	FILE(GLOB_RECURSE LINK_LIST ${OPENCV_DIR}/x86/vc15/lib/debug/*.lib)
	LINK_DIRECTORIES(${OPENCV_DIR}/x86/vc15/lib/debug/)
ELSEIF(CMAKE_BUILD_TYPE MATCHES "Release")
	MESSAGE(STATUS "This is Release") 
	FILE(GLOB_RECURSE LINK_LIST ${OPENCV_DIR}/x86/vc15/lib/release/*.lib)
	LINK_DIRECTORIES(${OPENCV_DIR}/x86/vc15/lib/release/)
ENDIF()
MESSAGE(STATUS "This is LINK_LIST: " ${LINK_LIST})
LINK_LIBRARIES(${LINK_LIST} opengl32.lib glu32.lib)

SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${PROJECT_DIR}/bin/)
ADD_EXECUTABLE(OpencvVisualizer ${SRC_LIST})
